Add Models with its configurations - Venue - Payment - EventPhoto - VenuePhoto

--- a/Eventify/appsettings.json
+++ b/Eventify/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=EventifyBD;Integrated Security = SSPI;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=EventifyDB;Integrated Security = True; Encrypt = False;"
   }
 }
